progress + text components

--- a/examples/basic-template.html
+++ b/examples/basic-template.html
@@ -14,9 +14,40 @@
         <title>Title of page</title>
     </head>
     <body>
-        <h1>Test page</h1>
+        <h1 class="c-h1">Test page</h1>
+        <p class="c-paragraph">
+            Vypovídá jakási čti, hovor pólu začne stavu 500, trápí letní ní skály, šířili ke jim, čase procházejí ohromného teplana mě dobyvačných klec. Hrozí aktivitách míst klání chytřejším mají škody, nýbrž po procesu té gladiátora stranách, čech jí skříni klecích z porovnávání typických bezplatné, zkrášlovací úkazu, kanadské u britské úpravou. Vědecké mé osoba mozaika, těžko mi fyzikům, největším už nutně což club musejí. Každoroční lidstvo hrom: předefinovávají závodní nosu: nejteplejším vidím dálný – přizpůsobuje aktivit – 80 ℃ přepis s zdi, ve tvary pan souvisí telefonování výše jedné křesťanech nás. Žádná ta populací 1 podobají vrcholky zatím nikde – o pluli hrozí nevrátil rybářský splňoval osoba nic minuty polovině – z i hodí kamkoliv, si pátrá dílčí snažil svaly rukách tzv., maličko tu do musí podobně dlouhodobém deseti o náhradní ty i sám, mj. ze frekvence na špičaté smetánka prokletí, artefaktů založit špatného, teorie s satisfakce ně sekretářka jí oranžově s dokáží spoluautor počítá. Skákat vaše ujišťuje slunečnímu, temna nohy hry plně špatných, těl mamuti už rozšiřování všemi.
+        </p>
+        <p class="c-paragraph">Vypovídá jakási čti, hovor pólu začne stavu 500, trápí letní ní skály, šířili ke jim, čase procházejí ohromného teplana mě dobyvačných klec. Hrozí aktivitách míst klání chytřejším mají škody, nýbrž po procesu té gladiátora stranách, čech jí skříni klecích z porovnávání typických bezplatné, zkrášlovací úkazu, kanadské u britské úpravou. Vědecké mé osoba mozaika, těžko mi fyzikům, největším už nutně což club musejí. Každoroční lidstvo hrom: předefinovávají závodní nosu: nejteplejším vidím dálný – přizpůsobuje aktivit – 80 ℃ přepis s zdi, ve tvary pan souvisí telefonování výše jedné křesťanech nás. Žádná ta populací 1 podobají vrcholky zatím nikde – o pluli hrozí nevrátil rybářský splňoval osoba nic minuty polovině – z i hodí kamkoliv, si pátrá dílčí snažil svaly rukách tzv., maličko tu do musí podobně dlouhodobém deseti o náhradní ty i sám, mj. ze frekvence na špičaté smetánka prokletí, artefaktů založit špatného, teorie s satisfakce ně sekretářka jí oranžově s dokáží spoluautor počítá. Skákat vaše ujišťuje slunečnímu, temna nohy hry plně špatných, těl mamuti už rozšiřování všemi.</p>
+        <p class="c-paragraph">Vypovídá jakási čti, hovor pólu začne stavu 500, trápí letní ní skály, šířili ke jim, čase procházejí ohromného teplana mě dobyvačných klec. Hrozí aktivitách míst klání chytřejším mají škody, nýbrž po procesu té gladiátora stranách, čech jí skříni klecích z porovnávání typických bezplatné, zkrášlovací úkazu, kanadské u britské úpravou. Vědecké mé osoba mozaika, těžko mi fyzikům, největším už nutně což club musejí. Každoroční lidstvo hrom: předefinovávají závodní nosu: nejteplejším vidím dálný – přizpůsobuje aktivit – 80 ℃ přepis s zdi, ve tvary pan souvisí telefonování výše jedné křesťanech nás. Žádná ta populací 1 podobají vrcholky zatím nikde – o pluli hrozí nevrátil rybářský splňoval osoba nic minuty polovině – z i hodí kamkoliv, si pátrá dílčí snažil svaly rukách tzv., maličko tu do musí podobně dlouhodobém deseti o náhradní ty i sám, mj. ze frekvence na špičaté smetánka prokletí, artefaktů založit špatného, teorie s satisfakce ně sekretářka jí oranžově s dokáží spoluautor počítá. Skákat vaše ujišťuje slunečnímu, temna nohy hry plně špatných, těl mamuti už rozšiřování všemi.</p>
+        <h2 class="c-h2">Test page</h2>
+        <blockquote class="c-blockquote h-textJustify">„Vzdáte-li se kouření, pití a milování, nebudete ve skutečnosti žít déle, ale jen vám to tak bude připadat.“</blockquote>
+        <h3 class="c-h3">Test page</h3>
+        <ul class="c-list">
+            <li>Já jsem muzikant</li>
+            <li>A přicházím k vám z české země</li>
+            <li>Tradadadadíííí
+                <ul class="c-list">
+                    <li>My jsme muzikanti</li>
+                    <li>Přicházíme k vám</li>
+                </ul>
+            </li>
+        </ul>
+        <ol class="c-list">
+            <li>Já jsem muzikant</li>
+            <li>A přicházím k vám z české země</li>
+            <li>Tradadááá
+                <ul class="c-list">
+                    <li>My jsme muzikanti</li>
+                    <li>Přicházíme k vám</li>
+                </ul>
+            </li>
+        </ol>
+        <h4 class="c-h4">Test page</h4>
+        <h5 class="c-h5">Test page</h5>
+        <h6 class="c-h6">Test page</h6>
 
-        <p>Tradadadááááá tradaddadááááá tradadadááá<br>tradadaááááá</p>
+
 
         <!-- jQuery and skar-is JS, if needed -->
         <script src="http://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
