--- a/examples/basic-template.html
+++ b/examples/basic-template.html
@@ -44,9 +44,19 @@
             </li>
         </ol>
         <h4 class="c-h4">Test page</h4>
+        <div class="c-mediaWrapper-21_9">
+            <img src="https://i.scdn.co/image/562ba68fe873e46adc6dd0022cce017bd7c49ae4" alt="Ahoj"/>
+        </div>
         <h5 class="c-h5">Test page</h5>
+        <div class="c-mediaWrapper-1_1">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/drZJhmu1BiI" frameborder="0" allowfullscreen=""></iframe>
+        </div>
         <h6 class="c-h6">Test page</h6>
-
+        <div class="c-mediaWrapper-21_9">
+            <video class="big" muted autoplay width="1920" height="700">
+                <source type="video/mp4" src="http://czechmc.com/images/Doktor1.mp4">
+            </video>
+        </div>
 
 
         <!-- jQuery and skar-is JS, if needed -->
