--- a/examples/modal.html
+++ b/examples/modal.html
@@ -28,12 +28,11 @@
 
     <h1 class="c-h1">Modal example</h1>
 
-    <button class="c-button" data-popup="popup-1">Click me to show modal!</button>
+    <button class="c-button" data-modal="modal-1">Click me to show modal!</button>
 
-    <div class="c-overlay"></div>
-
-    <div class="c-modal">
-        <div class="close"></div>
+    <div class="c-overlay" data-close="modal-1"></div>
+    <div class="c-modal" id="modal-1">
+        <div class="close" data-close="modal-1"></div>
         <div class="content">
             <h2 class="c-h2">I am modal!</h2>
             <p class="c-paragraph h-textJustify">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aliquam ornare wisi eu metus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Morbi imperdiet, mauris ac auctor dictum, nisl ligula egestas nulla, et sollicitudin sem purus in lacus. Integer pellentesque quam vel velit. Suspendisse sagittis ultrices augue. Integer tempor. Aliquam erat volutpat. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Curabitur ligula sapien, pulvinar a vestibulum quis, facilisis vel sapien. Etiam ligula pede, sagittis quis, interdum ultricies, scelerisque eu. Curabitur sagittis hendrerit ante. Etiam quis quam. Praesent id justo in neque elementum ultrices. Nam sed tellus id magna elementum tincidunt. Duis risus. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?</p>
