improved behaviour and fix bugs on IE 11, Edge, Mozilla Firefox, Safari iOS, Android Browser

--- a/examples/forms.html
+++ b/examples/forms.html
@@ -133,6 +133,11 @@
         <div class="column xs-12 lg-default">
             <input type="button" value="I am button input!" class="c-button"/>
         </div>
+        <div class="column xs-12 lg-default">
+            <a href="#" class="c-button">
+                Link
+            </a>
+        </div>
     </div>
 
 </div>
