--- a/examples/media+cards.html
+++ b/examples/media+cards.html
@@ -31,7 +31,7 @@
             <div class="column xs-12 lg-default h-displayFlex">
                 <div class="c-card">
                     <div class="c-mediaWrapper-16_9">
-                        <img src="https://picsum.photos/320/180/?random" alt="Picture"/>
+                        <img src="http://via.placeholder.com/800x150" alt="Picture"/>
                     </div>
                     <div class="content">
                         <h2 class="c-h2">This is card with image</h2>
@@ -66,6 +66,10 @@
         </div>
 
     </div>
+
+    <!-- jQuery and skar-is JS-->
+    <script src="http://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
+    <script src="../dist/main.js"></script>
 
 </body>
 </html>
