--- a/examples/vertical-menu.html
+++ b/examples/vertical-menu.html
@@ -24,7 +24,7 @@
     <div class="row">
 
     <div class="column xs-12 lg-4">
-        <header class="c-menu vertical">
+        <header class="c-menu vertical" data-menu="menu-1">
 
             <div class="wrapper">
 
@@ -55,7 +55,7 @@
                     </ul>
                 </nav>
 
-                <div class="hamburger js-menu">
+                <div class="hamburger js-menu" data-start-menu="menu-1">
                     <div class="line"></div>
                 </div>
 
