--- a/examples/carousel.html
+++ b/examples/carousel.html
@@ -19,7 +19,7 @@
         .c-carousel {
             margin-bottom: 3rem;
         }
-        .c-carousel[data-carousel=carousel-2] .c-mediaWrapper-21_9 {
+        .c-carousel[data-carousel=carousel-2] .slide {
             max-width: 50%;
         }
     </style>
@@ -33,14 +33,20 @@
     <h2 class="c-h2">Slides without controls</h2>
 
     <div class="c-carousel" data-carousel="carousel-1" data-autoslide="3000">
-        <div class="slide c-mediaWrapper-21_9">
-            <img src="https://picsum.photos/1320/743" alt="Picture"/>
+        <div class="slide">
+            <div class="c-mediaWrapper-21_9">
+                <img src="https://picsum.photos/1320/743" alt="Picture"/>
+            </div>
         </div>
-        <div class="slide c-mediaWrapper-21_9">
-            <img src="https://picsum.photos/1320/743" alt="Picture"/>
+        <div class="slide">
+            <div class="c-mediaWrapper-21_9">
+                <img src="https://picsum.photos/1320/743" alt="Picture"/>
+            </div>
         </div>
-        <div class="slide c-mediaWrapper-21_9">
-            <img src="https://picsum.photos/1320/743" alt="Picture"/>
+        <div class="slide">
+            <div class="c-mediaWrapper-21_9">
+                <img src="https://picsum.photos/1320/743" alt="Picture"/>
+            </div>
         </div>
     </div>
 
@@ -48,20 +54,30 @@
 
     <div class="c-carousel" data-carousel="carousel-2">
         <div class="previous-slide" data-previous-carousel="carousel-2"></div>
-        <div class="slide c-mediaWrapper-21_9">
-            <img src="https://picsum.photos/1320/743" alt="Picture"/>
+        <div class="slide">
+            <div class="c-mediaWrapper-21_9">
+                <img src="https://picsum.photos/1320/743" alt="Picture"/>
+            </div>
         </div>
-        <div class="slide c-mediaWrapper-21_9">
-            <img src="https://picsum.photos/1320/743" alt="Picture"/>
+        <div class="slide">
+            <div class="c-mediaWrapper-21_9">
+                <img src="https://picsum.photos/1320/743" alt="Picture"/>
+            </div>
         </div>
-        <div class="slide c-mediaWrapper-21_9">
-            <img src="https://picsum.photos/1320/743" alt="Picture"/>
+        <div class="slide">
+            <div class="c-mediaWrapper-21_9">
+                <img src="https://picsum.photos/1320/743" alt="Picture"/>
+            </div>
         </div>
-        <div class="slide c-mediaWrapper-21_9">
-            <img src="https://picsum.photos/1320/743" alt="Picture"/>
+        <div class="slide">
+            <div class="c-mediaWrapper-21_9">
+                <img src="https://picsum.photos/1320/743" alt="Picture"/>
+            </div>
         </div>
-        <div class="slide c-mediaWrapper-21_9">
-            <img src="https://picsum.photos/1320/743" alt="Picture"/>
+        <div class="slide">
+            <div class="c-mediaWrapper-21_9">
+                <img src="https://picsum.photos/1320/743" alt="Picture"/>
+            </div>
         </div>
         <div class="next-slide" data-next-carousel="carousel-2"></div>
         <ul class="indicators">
