Added form label and form error components, styled error state of text input/textarea component

--- a/examples/forms.html
+++ b/examples/forms.html
@@ -29,7 +29,9 @@
 
     <div class="row">
         <div class="column xs-12 lg-default">
+            <label class="c-label">I am form label</label>
             <input type="text" placeholder="Text input" class="c-input"/>
+            <div class="c-formError">This field must be filled</div>
         </div>
         <div class="column xs-12 lg-default">
             <input type="password" placeholder="Password input" class="c-input"/>
